# watchmap

./: Dockerfile  Jenkinsfile  Makefile  README.md  plot.py  pyproject.toml  requirements.txt  run_docker.sh  template.html  watchmap.py
templates/: activity.html
watchmap/: __init__.py  __main__.py  watchmap.py
watchmap/templates/: activity.html
