[tool.poetry]
name = "watchmap"
version = "1.2.0"
description = "Plots Activities (run, walk, swim, etc) from a Garmin device"
license = "GPL3"
authors = ["nbr23 <max@23.tf>", "bunnie <bunnie@kosagi.com>"]

packages = [
    { include = "watchmap" }
]

[tool.poetry.scripts]
watchmap = 'watchmap:run'

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^2.0.3"
matplotlib = "^3.7.5"
folium = "^0.14.0"
fitparse = "^1.2.0"
plotly = "^5.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
